--- a/css/apoieSM.css
+++ b/css/apoieSM.css
@@ -1,30 +1,136 @@
-@media only screen and (min-width: 601px), (max-width: 800px){
+@media only screen and (min-width: 601px) and (max-width: 1000px){
 
   *{
     margin: 0 auto;
     padding: 0;
   }
 
+  header{
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .lista{
+    display: none;
+  }
+
+  body{
+    width: 744px;
+    height: 2377px;
+  }
+
   .ft-principal{
     width: 500px;
     height: 377px;
+    display: block;
+    margin: 60px auto 60px auto;
+  }
+
+  /*Section 1*/
+  .sec1 p{
+    margin: 25px 25px 10px 25px;
+  }
+
+  a{
+    text-decoration: none;
+    color: #1E5044;
   }
 
   .sec1{
-    display: none;
+    text-align: center;
+    width: 500px;
+    height: 350px;
+    margin: 40px auto 40px auto; 
   }
+
+  section h1{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    color: #1E5044;
+    font-weight: 400;
+  }
+
+  section p{
+    font-family: 'Roboto Mono', monospace;
+    font-size: 20px;
+    color: #122E23;
+    text-align: left;
+  }
+
+  
+  /*Section 2*/
 
   .sec2{
-    display: none;
+    width: 380px;
+    height: 944px;
+    margin: 0 auto 0 auto;
   }
 
+  .quadrado-info{
+    width: 350px;
+    height: 442px;
+    border: 1px solid black;
+    border-radius: 6px;
+    margin: 20px auto;
+  }
 
+  .img{
+    width: 350px;
+    height: 232px;
+    
+  } 
+
+  .conteudo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid black;
+    margin: 0;
+  }
+
+  .quadrado-info h2{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    padding: 20px 0 10px 14px;
+  }
+
+  .quadrado-info p {
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+    font-size: 15px;
+    color: #122E23;
+    padding: 6px 0 0px 14px;
+  }
+
+  .botao{
+    display: flex;
+    justify-content: center;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 12px;
+    font-weight: 500;
+    color: #1E5044;
+    border: 1px solid #1E5044;
+    width: 126px;
+    height: 25px;
+    border-radius: 6px;
+    margin-left: 110px;
+    margin-top: 38px;
+  }
+
+  a:hover{
+    background-color: #729B79;
+    text-decoration: none;
+    color: #122E23;
+  }
+
+  /*FOOTER*/
   footer{
     width: 100%;
-    height: 200px;
+    height: 220px;
     background-color: rgb(255, 255, 255);
     border-top: 1px solid #1E5044;
-    margin-top: 50px;
+    margin-top: 60px;
   }
 
   .nomes{
@@ -32,17 +138,13 @@
   }
 
   .img-footer{
-    width: 82px;
-    height: 53px;
+    width: 153px;
+    height: 99px;
     float: right;
-    padding: 40px 30px 0 0;
+    padding: 16px 30px 0 0;
   }
 
   footer h2{
-    /*font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    color: #1E5044;*/
     display: none;
   }
 
@@ -51,7 +153,7 @@
     font-weight: 400;
     font-size: 14px;
     color: #122E23;
-    margin: 0 0 10px 48px;
+    margin: 10px 0 10px 56px;
   }
 
   .footer-class{
@@ -61,7 +163,7 @@
 
   .footer{
     border-top: 1px solid black;
-    width: 350px;
+    width: 700px;
     margin-left: 18px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
@@ -83,9 +185,4 @@
 
 
 
-
-
-
-
-  
 }
