--- a/css/form2SM.css
+++ b/css/form2SM.css
@@ -1,29 +1,32 @@
-@media only screen and (min-width: 1100px){
+@media only screen and (min-width: 601px) and (max-width: 1000px){
 
-  /*Formulário da Secretaria*/
+  /*Formulário das Secretarias*/
 
   body{
     background-color: #F2ECE2;
-    height: 890px;
-    margin: 0;
+    margin: 0 auto;
+    width: 100%;
   }
 
   .container {
-    max-width: 400px;
-    margin: 0 auto;
-    margin-bottom: 60px;
+    max-width: 700px;
+    margin: 0 20px 60px 200px;
   }
 
   .container h2{
     font-family: 'Montserrat', sans-serif;
     color: #1E5044;
     font-weight: 500;
+    font-size: 25px;
+    text-align: left;
+    width: 300px;
   }
 
   label{
     font-family: 'Roboto Mono', monospace;
     color: #122E23;
     font-weight: 400;
+    font-size: 16px;
   }
 
   .form-group {
@@ -32,69 +35,56 @@
 
   .form-group label {
     display: block;
-    font-weight: bold;
+    font-weight: 400;
     margin-bottom: 5px;
   }
 
   .form-group input[type="text"],
   .form-group input[type="email"] {
-    width: 100%;
+    width: 280px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
-
-  .form-group textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical;
-  }
-
-
-  a:hover{
-    background-color: #729B79;
-    text-decoration: none;
-    color: #122E23;
   }
 
   select{  
-    width: 100%;
+    width: 280px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     margin-bottom: 25px;
   }
 
+
   footer{
     width: 100%;
-    height: 280px;
-    background-color: rgb(218, 201, 201);
-    border-top: 1px solid #122E23;
+    height: 200px;
+    background-color: rgb(255, 255, 255);
+    border-top: 1px solid #1E5044;
+    margin-top: 50px;
+  }
+
+  .nomes{
+    display: none;
   }
 
   .img-footer{
     width: 153px;
     height: 99px;
     float: right;
-    padding: 50px 122px;
+    padding: 16px 56px 0 0;
   }
 
   footer h2{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    padding: 8px 0 0px 122px;
-    color: #1E5044;
+    display: none;
   }
 
   footer ul{
     font-family: 'Roboto Mono', monospace;
     font-weight: 400;
     font-size: 14px;
-    padding: 0 0 10px 122px;
     color: #122E23;
+    margin: 20px 0 10px 36px;
   }
 
   .footer-class{
@@ -105,19 +95,23 @@
   .links-footer a{
     text-decoration: none;
     color: #122E23;
+    border: none;
+    padding: 0;
+    cursor: pointer;
   }
 
   .footer{
     border-top: 1px solid black;
-    width: 1240px;
-    margin-left: 50px;
+    width: calc(100% - 10px);
+    margin-left: 5px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 13px;
   }
 
   .footer h3{
-    padding-left: 40px;
+    padding-top: 10px;
+    padding-left: 50px;
   }
 
   .span1{
@@ -128,7 +122,7 @@
     color: #AEF084;
   }
 
-  .botao {
+  a{
     padding: 10px 20px;
     background-color: #ffffff;
     color: #122E23;
@@ -141,6 +135,11 @@
     text-decoration: none;
   }
 
+  a:hover{
+    background-color: #729B79;
+    text-decoration: none;
+    color: #122E23;
+  }
+
 
 }
-
