--- a/css/apoieXS.css
+++ b/css/apoieXS.css
@@ -12,6 +12,7 @@
   body{
     width: 400px;
     height: 1322px;
+    background-color: #F2ECE2;
   }
 
 
@@ -51,7 +52,6 @@
     color: #122E23;
     text-align: left;
   }
-
 
  /*Aqui são os quadrados*/
 
