--- a/css/form-contatoSM.css
+++ b/css/form-contatoSM.css
@@ -1,27 +1,32 @@
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 601px) and (max-width: 1099px){
+
   /*Formulário dos Agricultores*/
 
   body{
     background-color: #F2ECE2;
-    height: 890px;
+    margin: 0 auto;
+    width: 100%;
   }
 
   .container {
-    max-width: 400px;
-    margin: 0 auto;
-    margin-bottom: 60px;
+    max-width: 700px;
+    margin: 0 20px 60px 200px;
   }
 
   .container h2{
     font-family: 'Montserrat', sans-serif;
     color: #1E5044;
     font-weight: 500;
+    font-size: 25px;
+    text-align: left;
+    width: 300px;
   }
 
   label{
     font-family: 'Roboto Mono', monospace;
     color: #122E23;
-    font-weight: 500;
+    font-weight: 400;
+    font-size: 16px;
   }
 
   .form-group {
@@ -30,7 +35,7 @@
 
   .form-group label {
     display: block;
-    font-weight: bold;
+    font-weight: 400;
     margin-bottom: 5px;
   }
 
@@ -38,20 +43,99 @@
   .form-group input[type="textarea"],
   .form-group input[type="tel"],
   .form-group input[type="email"] {
-    width: 100%;
+    width: 280px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
   }
 
-  .form-group textarea {
-    width: 100%;
+  select{  
+    width: 280px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    resize: vertical;
+    margin-bottom: 25px;
   }
 
+
+  footer{
+    width: 100%;
+    height: 200px;
+    background-color: rgb(255, 255, 255);
+    border-top: 1px solid #1E5044;
+    margin-top: 50px;
+  }
+
+  .nomes{
+    display: none;
+  }
+
+  .img-footer{
+    width: 153px;
+    height: 99px;
+    float: right;
+    padding: 16px 56px 0 0;
+  }
+
+  footer h2{
+    display: none;
+  }
+
+  footer ul{
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+    font-size: 14px;
+    color: #122E23;
+    margin: 20px 0 10px 36px;
+  }
+
+  .footer-class{
+    display: flex;
+    line-height: 22px;
+  }
+
+  .links-footer a{
+    text-decoration: none;
+    color: #122E23;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+  }
+
+  .footer{
+    border-top: 1px solid black;
+    width: calc(100% - 10px);
+    margin-left: 5px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+  }
+
+  .footer h3{
+    padding-top: 10px;
+    padding-left: 50px;
+  }
+
+  .span1{
+    color: #1E5044;
+  }
+
+  .span2{
+    color: #AEF084;
+  }
+
+  button{
+    padding: 10px 20px;
+    background-color: #ffffff;
+    color: #122E23;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+    border: 1px solid #122E23;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 25px;
+    text-decoration: none;
+  }
 
   a:hover{
     background-color: #729B79;
@@ -63,88 +147,6 @@
     background-color: #729B79;
     text-decoration: none;
     color: #122E23;
-  }
-
-  select{  
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 25px;
-  }
-
-
-  footer{
-    width: 100%;
-    height: 280px;
-    background-color: rgb(255, 255, 255);
-  }
-
-  .img-footer{
-    width: 153px;
-    height: 99px;
-    float: right;
-    padding: 50px 122px;
-  }
-
-  footer h2{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    padding: 20px 0 0px 122px;
-    color: #1E5044;
-  }
-
-  footer ul{
-    font-family: 'Roboto Mono', monospace;
-    font-weight: 400;
-    font-size: 14px;
-    padding: 0 0 10px 122px;
-    color: #122E23;
-  }
-
-  .footer-class{
-    display: flex;
-    line-height: 22px;
-  }
-
-  .links-footer a{
-    text-decoration: none;
-    color: #122E23;
-  }
-
-  .footer{
-    border-top: 1px solid black;
-    width: 1240px;
-    margin-left: 50px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-  }
-
-  .footer h3{
-    padding-left: 40px;
-  }
-
-  .span1{
-    color: #1E5044;
-  }
-
-  .span2{
-    color: #AEF084;
-  }
-
-  button {
-    padding: 10px 20px;
-    background-color: #ffffff;
-    color: #122E23;
-    font-family: 'Roboto Mono', monospace;
-    font-weight: 500;
-    border: 1px solid #122E23;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 25px;
-    text-decoration: none;
   }
 
 }
