--- a/css/pg_finalSM.css
+++ b/css/pg_finalSM.css
@@ -1,5 +1,147 @@
-@media only screen and (min-width: 601px) and (max-width: 1000px){
+@media only screen and (min-width: 601px) and (max-width: 1099px){
 
+  *{
+    margin: 0;
+    padding: 0;
+  }
 
+  body{
+    background-color: #F2ECE2;
+    width: 100%;
+    height: 1133px;
+  }
 
+  a{
+    text-decoration: none;
+    color: #1E5044;
+  }
+
+  main{
+    width: 684px;
+    height: 600px;
+    background-color: #ffffff;
+    margin: 45px auto 100px auto;
+  }
+
+  aside{
+    width: 204px;
+    height: 384px;
+    float: left;
+    background-color: #aa9f8c;
+  }
+
+  .img-aside{
+    display: block;
+    width: 100px;
+    height: 100px;
+    margin: 50px auto 30px auto;
+  }
+
+  .prg-1{
+    font-family: 'Roboto Mono', monospace;
+    font-size: 11px;
+    text-align: left;
+    padding: 23px 0 0 10px;
+  }
+
+  section{
+    width: 444px;
+    height: 600px;
+    float: right;
+    background-color: #aa9f8c;
+  }
+
+  h1{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    color: #1E5044;
+    text-align: center;
+    margin-top: 40px;
+  }
+
+  .title-1{
+    margin: 30px 0 15px 35px;
+  }
+
+  h2{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    color: #1E5044;
+  }
+
+  .lista2{
+    padding: 0 0 0 50px;
+  }
+
+  .ja-cadastrado{
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    color: #122E23;
+  }
+
+  .title-2{
+    margin: 35px 0 15px 40px;
+  }
+
+  footer{
+    width: 100%;
+    height: 220px;
+    background-color: rgb(255, 255, 255);
+    border-top: 1px solid #1E5044;
+    margin-top: 60px;
+  }
+
+  .nomes{
+    display: none;
+  }
+
+  .img-footer{
+    width: 153px;
+    height: 99px;
+    float: right;
+    padding: 16px 30px 0 0;
+  }
+
+  footer h2{
+    display: none;
+  }
+
+  footer ul{
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+    font-size: 14px;
+    color: #122E23;
+    margin: 10px 0 10px 56px;
+  }
+
+  .footer-class{
+    display: flex;
+    line-height: 22px;
+  }
+
+  .footer{
+    border-top: 1px solid black;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+  }
+
+  .footer h3{
+    padding-top: 15px;
+    padding-left: 20px;
+  }
+
+  .span1{
+    color: #1E5044;
+  }
+
+  .span2{
+    color: #AEF084;
+  }
 }
