--- a/css/pg_finalXS.css
+++ b/css/pg_finalXS.css
@@ -1,6 +1,171 @@
 @media only screen and (min-width: 400px) and (max-width: 600px){
 
+  *{
+    margin: 0;
+    padding: 0;
+  }
 
+  body{
+    width: 100%;
+    height: 1110px;
+    background-color: #F2ECE2;
+  }
+  
+  a{
+    text-decoration: none;
+    color: #1E5044;
+  }
+
+
+  main{
+    width: 300px;
+    height: 672px;
+    background-color: #ffffff;
+    margin: 30px auto 30px auto;
+  }
+
+  aside{
+    width: 300px;
+    height: 233px;
+    background-color: #aa9f8c;
+    margin: 0 auto 50px auto;
+  }
+
+  .img-aside{
+    display: block;
+    width: 100px;
+    height: 100px;
+    margin: 23px auto;
+  }
+  
+  .prg-1{
+    font-family: 'Roboto Mono', monospace;
+    font-size: 11px;
+    text-align: left;
+    padding: 23px 0 0 10px;
+  }
+
+  section{
+    width: 300px;
+    height: 377px;
+    background-color: #aa9f8c;
+    margin: 0 auto;
+  }
+  
+  
+  .title-1{
+    padding: 20px 34px 10px 34px;
+  
+  }
+  
+  h2{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    color: #1E5044;
+  }
+  
+  h1{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 25px;
+    color: #1E5044;
+    text-align: center;
+    margin-top: 50px;
+    display: none;
+  }
+  
+  .lista2{
+    padding: 0 0 0 40px;
+  }
+  
+  .ja-cadastrado{
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 15px;
+    color: #122E23;
+  }
+  
+  .title-2{
+    margin: 28px 0 8px 25px;
+  }
+  
+  .pg-2{
+    margin: 50px 11px 12px 12px;
+    text-align: left;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 15px;
+    color: #122E23;
+  }
 
   
+  footer{
+    width: 100%;
+    height: 180px;
+    background-color: rgb(255, 255, 255);
+    border-top: 1px solid #1E5044;
+    margin-top: 50px;
+  }
+
+  .nomes{
+    display: none;
+  }
+
+  .img-footer{
+    width: 82px;
+    height: 53px;
+    float: right;
+    padding: 40px 30px 0 0;
+  }
+
+  footer h2{
+    display: none;
+  }
+
+  footer ul{
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+    font-size: 14px;
+    color: #122E23;
+    margin: 10px 0 10px 48px;
+  }
+
+  .footer-class{
+    display: flex;
+    line-height: 22px;
+  }
+
+  .footer{
+    border-top: 1px solid black;
+    width: calc(100%-20px);
+    margin-left: 5px;
+    margin-right: 5px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+  }
+
+  .footer h3{
+    padding-top: 15px;
+    padding-left: 20px;
+  }
+
+  .span1{
+    color: #1E5044;
+  }
+
+  .span2{
+    color: #AEF084;
+  }
+
+  a:hover{
+    background-color: #729B79;
+    text-decoration: none;
+    color: #122E23;
+  }
+
+
 }
