--- a/css/apoie.css
+++ b/css/apoie.css
@@ -19,10 +19,6 @@
     margin-left: 50px;
   }
 
-  .sec1 p{
-    margin: 25px 25px;
-    font-family: 'Roboto Mono', monospace;
-  }
 
   a{
     text-decoration: none;
@@ -74,16 +70,21 @@
 
   .sec1{
     text-align: center;
-    border: 1px solid black;
     width: 1200px;
     margin: 120px auto 120px auto;
+  }
+
+  .sec1 p{
+    margin: 25px 25px;
+    font-family: 'Roboto Mono', monospace;
+    text-align: left;
   }
 
   section h1{
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
     color: #1E5044;
-    font-weight: 400;
+    font-weight: 500;
   }
 
   section p{
@@ -96,6 +97,7 @@
     width: 100%;
     height: 280px;
     background-color: rgb(255, 255, 255);
+    border-top: 1px solid #1E5044;
   }
 
   .img-footer{
