--- a/css/apoieSM.css
+++ b/css/apoieSM.css
@@ -16,7 +16,7 @@
 
   body{
     width: 744px;
-    height: 2377px;
+    height: 2470px;
     background-color: #F2ECE2;
   } 
 
@@ -41,14 +41,14 @@
     text-align: center;
     width: 500px;
     height: 350px;
-    margin: 40px auto 40px auto; 
+    margin: 40px auto 190px auto; 
   }
 
   section h1{
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
     color: #1E5044;
-    font-weight: 400;
+    font-weight: 500;
   }
 
   section p{
@@ -63,13 +63,13 @@
 
   .sec2{
     width: 380px;
-    height: 944px;
+    height: 974px;
     margin: 0 auto 0 auto;
   }
 
   .quadrado-info{
     width: 350px;
-    height: 442px;
+    height: 500px;
     border: 1px solid black;
     border-radius: 6px;
     margin: 20px auto;
@@ -85,8 +85,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 1px solid black;
-    margin: 0;
+    margin: 0 auto;
   }
 
   .quadrado-info h2{
@@ -131,7 +130,7 @@
     height: 220px;
     background-color: rgb(255, 255, 255);
     border-top: 1px solid #1E5044;
-    margin-top: 60px;
+    margin-top: 120px;
   }
 
   .nomes{
@@ -164,8 +163,8 @@
 
   .footer{
     border-top: 1px solid black;
-    width: 700px;
-    margin-left: 18px;
+    width: calc(100% - 10px);
+    margin-left: 5px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 13px;
