--- a/css/form-contato.css
+++ b/css/form-contato.css
@@ -6,6 +6,53 @@
     height: 890px;
   }
 
+  .logo{
+    max-width: 123px;
+    height: 100px;
+    margin-left: 50px;
+  }
+
+
+  a{
+    text-decoration: none;
+    color: #1E5044;
+  }
+
+  nav ul li{
+    list-style: none;
+  }
+
+  header{
+    border: 1px #1E5044 solid;
+    max-width: 1200px;
+    height: 95px;
+    margin: 23px 60px 23px 60px;
+    padding: 10px 0px 10px 30px;
+  }
+
+  .links{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 23px auto;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    height: 8vh;
+  }
+
+  .lista li{
+    letter-spacing: 3px;
+    margin-left: 12px;
+    display: inline;
+    float: right;
+    color: #1E5044;
+  }
+
+  .lista{
+    margin-left:50px;
+  }
+
   .container {
     max-width: 400px;
     margin: 0 auto;
@@ -78,6 +125,7 @@
     width: 100%;
     height: 280px;
     background-color: rgb(255, 255, 255);
+    border-top: 1px solid #1E5044;
   }
 
   .img-footer{
@@ -91,7 +139,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 20px;
-    padding: 20px 0 0px 122px;
+    padding: 10px 0 0px 122px;
     color: #1E5044;
   }
 
@@ -111,6 +159,7 @@
   .links-footer a{
     text-decoration: none;
     color: #122E23;
+    margin: 0;
   }
 
   .footer{
