--- a/css/form-contatoSM.css
+++ b/css/form-contatoSM.css
@@ -102,6 +102,10 @@
     cursor: pointer;
   }
 
+  .links-footer{
+    margin-top: 10px;
+  }
+
   .footer{
     border-top: 1px solid black;
     width: calc(100% - 10px);
