--- a/css/form1SM.css
+++ b/css/form1SM.css
@@ -99,6 +99,11 @@
       padding: 0;
       cursor: pointer;
     }
+
+    
+    .links-footer{
+      margin-top: 10px;
+    }
   
     .footer{
       border-top: 1px solid black;
