--- a/css/pg_final.css
+++ b/css/pg_final.css
@@ -19,14 +19,15 @@
     margin-left: 50px;
   }
   
-  .sec1 p{
-    margin: 25px 25px;
-    font-family: 'Roboto Mono', monospace;
-  }
-  
   a{
     text-decoration: none;
     color: #1E5044;
+  }
+
+  a:hover{
+    background-color: #729B79;
+    text-decoration: none;
+    color: #122E23;
   }
   
   nav ul li{
@@ -140,7 +141,7 @@
     margin: 50px 0 20px 76px;
   }
   
-  .pg-2{
+  .prg-2{
     margin: 100px 0 20px 30px;
     text-align: left;
     font-family: 'Roboto Mono', monospace;
@@ -155,6 +156,7 @@
     width: 100%;
     height: 280px;
     background-color: rgb(255, 255, 255);
+    border-top: 1px solid #1E5044;
   }
   
   .img-footer{
