--- a/css/pg_finalXS.css
+++ b/css/pg_finalXS.css
@@ -16,6 +16,12 @@
     color: #1E5044;
   }
 
+  a:hover{
+    background-color: #729B79;
+    text-decoration: none;
+    color: #122E23;
+  }
+
 
   main{
     width: 300px;
@@ -26,7 +32,7 @@
 
   aside{
     width: 300px;
-    height: 233px;
+    height: 245px;
     background-color: #aa9f8c;
     margin: 0 auto 50px auto;
   }
@@ -104,7 +110,7 @@
   
   footer{
     width: 100%;
-    height: 180px;
+    height: 200px;
     background-color: rgb(255, 255, 255);
     border-top: 1px solid #1E5044;
     margin-top: 50px;
