--- a/css/apoieSM.css
+++ b/css/apoieSM.css
@@ -102,7 +102,7 @@
       width: 50px;
       height: 50px;
       text-align: center;
-      margin: 0 0 0 300px;
+      margin: 0 0 0 230px;
     }
 
     .links{
@@ -111,8 +111,12 @@
       height: 100px;
     }
 
+  main{
+    width: 601px;
+  }
+
   body{
-    width: 744px;
+    width:100%;
     height: 2050px;
     background-color: #F2ECE2;
   } 
@@ -260,8 +264,8 @@
 
   .footer{
     border-top: 1px solid black;
-    width: calc(100% - 10px);
-    margin-left: 5px;
+    width: calc(100% - 40px);
+    margin-left: 18px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 13px;
