--- a/css/apoieXS.css
+++ b/css/apoieXS.css
@@ -10,17 +10,127 @@
   }
 
   body{
-    width: 400px;
+    width: 100%;
     height: 1352px;
     background-color: #F2ECE2;
   }
 
-  
+  main{
+    width: 400px;
+  }
 
+  
   /*HEADER*/
   header{
     text-align: center;
   }
+
+
+  .lista{
+    display: none;
+  }
+
+  header {
+    width: 100%;
+    height: 120px;
+    margin: 30px 0;
+  }
+
+  .hamburger-menu{
+        float:right;
+    }
+
+  #menu_toggle{
+        opacity: 0;
+    }
+    #menu_toggle:checked + .menu_btn > span{
+        transform:rotate(45deg);
+    }
+    #menu_toggle:checked + .menu_btn > span::before{
+        top:0;
+        transform:rotate(0);
+    }
+    #menu_toggle:checked + .menu_btn > span::after{
+        top:0;
+        transform:rotate(90deg);
+    }
+    #menu_toggle:checked ~ .menu_box{
+        left:0 !important
+    }
+    .menu_btn{
+        position:fixed;
+        top:16px;
+        left: 16px;
+        width: 20px;
+        height: 20px;
+        font-size: 10px;
+        cursor: pointer;
+        z-index: 2;
+    }
+    .menu_btn > span, .menu_btn > span::before, .menu_btn> span::after{
+        display: block;
+        position: relative;
+        width:100%;
+        height: 1px;
+        background-color: #616161;
+        transition-duration: .25s;
+    }
+    .menu_btn > span::before{
+        content: '';
+        top: -8px;
+    }
+    .menu_btn > span::after{
+        content: '';
+        top: 6px;
+    }
+    .menu_box{
+        display: block;
+        position: fixed;
+        top:0;
+        left: -100%;
+        height: 100vh;
+        width: 150px;
+        margin: 0;
+        padding: 42px 0 0 0;
+        list-style: none;
+        background-color: #eee;
+        box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+        transition-duration: .25s;
+    z-index: 1;
+    }
+    .menu_box li{
+        border-bottom: 1px ridge ⁠ddd;
+    }
+    .menu_box li:first-child{
+        border-top: 1px ridge ⁠ddd;
+    }
+    .menu_item{
+        display: block;
+        padding: 12px 24px;
+        color:#15a340;
+        font-family: 'Roboto', sans-serif;
+        font-size: 13px;
+        font-weight: 600;
+        text-decoration: none;
+        transition-duration: .25s;
+    }
+
+    .menu_item:hover{
+        background-color: #ccc;
+    }
+
+    .Logo{
+      width: 50px;
+      height: 50px;
+      text-align: center;
+      margin: 0 0 0 140px;
+    }
+
+    .links{
+      display: flex;
+      flex-direction: row;
+      height: 100px;
+    }
   /*Section 1*/
   
   .sec1 p{
@@ -144,7 +254,7 @@
     font-weight: 400;
     font-size: 14px;
     color: #122E23;
-    margin: 0 0 10px 48px;
+    margin: 10px 0 10px 48px;
   }
 
   .footer-class{
