--- a/css/form1.css
+++ b/css/form1.css
@@ -94,18 +94,14 @@
     border-radius: 4px;
   }
 
-  .form-group textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical;
+
+  ul li a:hover{
+    background-color: #729B79;
+    text-decoration: none;
+    color: #122E23;
   }
 
-
-
-
-  a:hover{
+  .botao:hover{
     background-color: #729B79;
     text-decoration: none;
     color: #122E23;
@@ -130,14 +126,14 @@
     width: 153px;
     height: 99px;
     float: right;
-    padding: 50px 122px;
+    padding: 65px 122px 0 0;
   }
 
   footer h2{
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 20px;
-    padding: 8px 0 0px 122px;
+    padding: 30px 0 0px 122px;
     color: #1E5044;
   }
 
@@ -145,8 +141,9 @@
     font-family: 'Roboto Mono', monospace;
     font-weight: 400;
     font-size: 14px;
-    padding: 0 0 10px 122px;
+    padding: 0 0 20px 122px;
     color: #122E23;
+    margin: 0;
   }
 
   .footer-class{
