--- a/css/form2.css
+++ b/css/form2.css
@@ -105,7 +105,13 @@
   }
 
 
-  a:hover{
+  .botao:hover{
+    background-color: #729B79;
+    text-decoration: none;
+    color: #122E23;
+  }
+
+  ul li a:hover{
     background-color: #729B79;
     text-decoration: none;
     color: #122E23;
@@ -122,7 +128,7 @@
   footer{
     width: 100%;
     height: 280px;
-    background-color: rgb(218, 201, 201);
+    background-color: rgb(255, 255, 255);
     border-top: 1px solid #122E23;
   }
 
@@ -130,7 +136,7 @@
     width: 153px;
     height: 99px;
     float: right;
-    padding: 50px 122px;
+    padding: 80px 122px 0 0;
   }
 
   footer h2{
