--- a/css/pg_final.css
+++ b/css/pg_final.css
@@ -28,7 +28,7 @@
     color: #1E5044;
   }
 
-  a:hover{
+  ul li a:hover{
     background-color: #729B79;
     text-decoration: none;
     color: #122E23;
@@ -69,17 +69,17 @@
     margin-left:90px;
   }
   
-  main{
+  .main2{
     width: 1200px;
     height: 829px;
-    background-color: #ffffff;
+
     margin: 70px auto;
   }
   
   
   aside{
     width: 340px;
-    height: 828px;
+    height: 600px;
     background-color: #1E5044;
     float: left;
     background-color: #aa9f8c;
@@ -167,7 +167,7 @@
     width: 153px;
     height: 99px;
     float: right;
-    padding: 50px 122px;
+    padding: 65px 122px 0 0;
   }
   
   footer h2{
