--- a/css/pg_finalSM.css
+++ b/css/pg_finalSM.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 601px) and (max-width: 1099px){
+@media only screen and (min-width: 683px) and (max-width: 1099px){
 
   *{
     margin: 0;
@@ -102,7 +102,7 @@
       width: 50px;
       height: 50px;
       text-align: center;
-      margin: 0 0 0 300px;
+      margin: 0 0 0 280px;
     }
 
     .links{
@@ -111,10 +111,11 @@
       font-family: "Montserrat", sans-serif;
       height: 100px;
     }
+
   body{
     background-color: #F2ECE2;
     width: 100%;
-    height: 1133px;
+    height: 1090px;
   }
 
   a{
@@ -128,7 +129,12 @@
     color: #122E23;
   }
 
-  main{
+  .main1{
+    max-width: 684px;
+    margin: 0 auto;
+  }
+
+  .main2{
     width: 684px;
     height: 600px;
     background-color: #ffffff;
