--- a/css/form1.css
+++ b/css/form1.css
@@ -107,6 +107,14 @@
     color: #122E23;
   }
 
+  .form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+  }
+
   select{  
     width: 100%;
     padding: 10px;
