--- a/css/apoieXS.css
+++ b/css/apoieXS.css
@@ -21,10 +21,6 @@
 
   
   /*HEADER*/
-  header{
-    text-align: center;
-  }
-
 
   .lista{
     display: none;
@@ -107,7 +103,7 @@
     .menu_item{
         display: block;
         padding: 12px 24px;
-        color:#15a340;
+        color:#1E5044;
         font-family: 'Roboto', sans-serif;
         font-size: 13px;
         font-weight: 600;
