--- a/css/form1SM.css
+++ b/css/form1SM.css
@@ -83,7 +83,7 @@
       .menu_item{
           display: block;
           padding: 12px 24px;
-          color:#15a340;
+          color:#1E5044;
           font-family: 'Roboto', sans-serif;
           font-size: 13px;
           font-weight: 600;
@@ -151,6 +151,14 @@
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 4px;
+    }
+
+    .form-group textarea {
+      width: 280px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      resize: vertical;
     }
   
     select{  
