--- a/css/pg-incialSm.css
+++ b/css/pg-incialSm.css
@@ -122,7 +122,7 @@
 	.menu_item{
 		display: block;
 		padding: 12px 24px;
-		color:#15a340;
+		color:#1E5044;
 		font-family: 'Roboto', sans-serif;
 		font-size: 13px;
 		font-weight: 600;
