--- a/css/pg_finalXS.css
+++ b/css/pg_finalXS.css
@@ -86,7 +86,7 @@
     .menu_item{
         display: block;
         padding: 12px 24px;
-        color:#15a340;
+        color:#1E5044;
         font-family: 'Roboto', sans-serif;
         font-size: 13px;
         font-weight: 600;
@@ -115,7 +115,7 @@
 
   body{
     width: 100%;
-    height: 1075px;
+    height: 1300px;
     background-color: #F2ECE2;
   }
   
@@ -134,11 +134,11 @@
     max-width: 400px;
     margin: 0 auto;
   }
+
   .main2{
     width: 300px;
-    height: 672px;
-    background-color: #ffffff;
-    margin: 30px auto 30px auto;
+    height: 915px;
+    margin: 30px auto 10px auto;
   }
 
   aside{
@@ -146,13 +146,16 @@
     height: 245px;
     background-color: #aa9f8c;
     margin: 0 auto 50px auto;
+    border-radius: 6px;
   }
 
   .img-aside{
     display: block;
-    width: 100px;
-    height: 100px;
-    margin: 23px auto;
+    width: 180px;
+    height: 120px;
+    margin: 0 auto;
+    padding-top: 30px;
+    border-radius: 6px;
   }
   
   .prg-1{
@@ -162,11 +165,18 @@
     padding: 23px 0 0 10px;
   }
 
+  hr{
+    width: 250px;
+    margin: 15px auto 0 auto;
+    border-color: #122E23;
+  }
+
   section{
     width: 300px;
-    height: 377px;
+    height: 620px;
     background-color: #aa9f8c;
     margin: 0 auto;
+    border-radius: 6px;
   }
   
   
@@ -193,7 +203,7 @@
   }
   
   .lista2{
-    padding: 0 0 0 40px;
+    padding: 0 0 0 30px;
   }
   
   .ja-cadastrado{
@@ -205,16 +215,16 @@
   }
   
   .title-2{
-    margin: 28px 0 8px 25px;
+    margin: 28px 0 8px 30px;
   }
   
   .prg-2{
-    margin: 50px 11px 12px 12px;
+    margin: 10px 11px 12px 12px;
     text-align: left;
     font-family: 'Roboto Mono', monospace;
     font-weight: 400;
     font-size: 10px;
-    line-height: 15px;
+    line-height: 20px;
     color: #122E23;
   }
 
@@ -257,9 +267,8 @@
 
   .footer{
     border-top: 1px solid black;
-    width: calc(100%-20px);
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 13px;
